<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.lukile.imc.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/weight"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/height"
        android:textColor="#FF0000"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"/>

    <RadioGroup
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/meter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meter"/>
        <RadioButton
            android:id="@+id/centimeter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/centimeter"/>
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox"/>

    <Button
        android:id="@+id/button_compute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compute"/>

    <Button
        android:id="@+id/button_raz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raz"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
